--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
             <version>1.7.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.1</version>
+        </dependency>
     </dependencies>
 
     <build>
